<resources>
    <string name="app_name">LoginDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_lbl">Login</string>
    <string name="email_lbl">Email</string>
    <string name="pwd_lbl">Password</string>
    <string name="preference_key">com.fierydevs.logindemo.PREFERENCE_KEY</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout_lbl">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="username_summary">Please provide your username</string>
    <string name="your_name">Your Name</string>
    <string name="app_updates">Application Updates</string>
    <string name="app_updates_summary">This option if selected will allow the application to check for latest versions.</string>
    <string name="download_details">Download Details</string>
    <string name="download_details_summary">Select the kind of data that you would like to download</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="my_details">My Details</string>
</resources>
